# sourmash_plugin_branchwater

./: .gitignore  Cargo.toml  Makefile  README.md  environment.yml  gather.py  magsearch.py  multigather.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: black.yml  build-test.yml  maturin-wheels.yml
doc/: README.md  developer.md
python/branchwater/: __main__.py  sourmash_plugin.py
python/pymagsearch/: sourmash_plugin.py
python/pyo3_branchwater/: __main__.py  sourmash_plugin.py
python/tests/: conftest.py  sourmash_tst_utils.py  test_basic.py  test_gather.py  test_multigather.py
scripts/: README.md
scripts/pairwise_to_matrix/: README.md  pairwise_to_matrix.py
src/: README.md  branch_api.rs  c_ani.rs  check.rs  cluster.rs  fastagather.rs  fastgather.rs  fastmultigather.rs  fastmultigather_rocksdb.rs  index.rs  lib.rs  lib_multicollection.rs  main.rs  manysearch.rs  manysearch_rocksdb.rs  manysketch.rs  mastiff_manygather.rs  mastiff_manysearch.rs  multisearch.rs  pairwise.rs  prob_overlap.rs  search_enrichment.rs  search_significance.rs  sigcat.rs  singlesketch.rs  utils.rs
src/python/: branchwater_plugin.py
src/python/pyo3_branchwater/: __init__.py
src/python/sourmash_plugin_branchwater/: __init__.py  prettyprint.py  py_example.py
src/python/tests/: __init__.py  conftest.py  sourmash_tst_utils.py  test_branch_api.py  test_cluster.py  test_fastgather.py  test_fastmultigather.py  test_gather.py  test_index.py  test_index_api.py  test_manycompare.py  test_manysearch.py  test_mastiffgather.py  test_mastiffsearch.py  test_multigather.py  test_multisearch.py  test_pairwise.py  test_search.py  test_sigcat.py  test_sketch.py
src/python/tests/test-data/: cluster.pairwise.csv  short.fq  snap25.protein.k5.sig
src/python/tests/test-data/rocksdb/: podar-ref-subset.branch095.rocksdb.README.txt  podar-ref-subset.branch0_9_13.external.rocksdb.README.txt  podar-ref-subset.branch0_9_13.internal.rocksdb.README.txt  podar-ref-subset.branch0_9_5.rocksdb.README.txt
src/python/tests/test-data/rocksdb/podar-ref-subset.branch095.rocksdb/: LOG  OPTIONS-000009
src/python/tests/test-data/rocksdb/podar-ref-subset.branch0_9_13.external.rocksdb/: 000009.sst  000010.sst  IDENTITY  LOG  MANIFEST-000005
src/python/tests/test-data/rocksdb/podar-ref-subset.branch0_9_13.internal.rocksdb/: 000009.sst  000010.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
src/python/tests/test-data/rocksdb/podar-ref-subset.branch0_9_5.rocksdb/: 000013.sst  000014.sst  IDENTITY  MANIFEST-000005
src/utils/: buildutils.rs  mod.rs  multicollection.rs
test_check_pairwise/: .gitignore  Makefile  Snakefile  compare_pairwise_csv.py  matrix_to_pairwise.py
