[package]
name = "sourmash_plugin_branchwater"
version = "0.9.14-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sourmash_plugin_branchwater"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
#sourmash = { version = "0.18.0", features = ["branchwater"] }
sourmash = { git = "https://github.com/sourmash-bio/sourmash.git", branch = "impl_revindex", features = ["branchwater"] }
serde_json = "1.0.139"
niffler = "2.4.0"
log = "0.4.26"
env_logger = { version = "0.11.6" }
simple-error = "0.3.1"
anyhow = "1.0.96"
zip = { version = "2.0", default-features = false }
tempfile = "3.17"
needletail = "0.6.3"
csv = "1.3.1"
camino = "1.1.9"
glob = "0.3.2"
rustworkx-core = "0.16.0"
streaming-stats = "0.2.3"
rust_decimal = { version = "1.36.0", features = ["maths"] }
rust_decimal_macros = "1.36.0"
getset = "0.1"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_matches = "1.5.0"
predicates = "3.1.3"
tempfile = "3.17.1"

[profile.release]
#target-cpu=native
#lto = "thin"
opt-level = 3
