[package]
name = "sourmash_plugin_branchwater"
version = "0.9.14-dev"
edition = "2021"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sourmash_plugin_branchwater"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module", "anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sourmash = { version = "0.20.0", features = ["branchwater"] }
serde_json = "1.0.140"
niffler = "2.4.0"
log = "0.4.27"
env_logger = { version = "0.11.6" }
simple-error = "0.3.1"
anyhow = "1.0.98"
zip = { version = "2.5", default-features = false }
tempfile = "3.19"
needletail = "0.6.3"
csv = "1.3.1"
camino = "1.1.9"
glob = "0.3.2"
rustworkx-core = "0.16.0"
streaming-stats = "0.2.3"
rust_decimal = { version = "1.37.1", features = ["maths"] }
rust_decimal_macros = "1.37.1"
getset = "0.1"
ctrlc = "3.4.6"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_matches = "1.5.0"
predicates = "3.1.3"
tempfile = "3.19.1"

[profile.release]
#target-cpu=native
#lto = "thin"
opt-level = 3
