[package]
name = "sourmash_plugin_branchwater"
version = "0.9.14-dev"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sourmash_plugin_branchwater"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module", "anyhow"] }
rayon = "1.10.0"
serde = { version = "1.0.225", features = ["derive"] }
sourmash = { version = "0.21.0", features = ["branchwater"] }
serde_json = "1.0.145"
niffler = "3.0.0"
log = "0.4.28"
env_logger = { version = "0.11.8" }
simple-error = "0.3.1"
anyhow = "1.0.99"
zip = { version = "4.2.0", default-features = false }
tempfile = "3.22"
needletail = "0.6.3"
csv = "1.3.1"
camino = "1.2.0"
glob = "0.3.3"
rustworkx-core = "0.16.0"
streaming-stats = "0.2.3"
rust_decimal = { version = "1.38.0", features = ["maths"] }
rust_decimal_macros = "1.38.0"
getset = "0.1"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_matches = "1.5.0"
predicates = "3.1.3"
tempfile = "3.22.0"

[profile.release]
#target-cpu=native
#lto = "thin"
opt-level = 3
