[project]
name = "sourmash_plugin_branchwater"
description = "fast command-line extensions for sourmash"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    ]
dependencies = ["sourmash>=4.8.10,<5"]

authors = [
  { name="N. Tessa Pierce-Ward", orcid="0000-0002-2942-5331" },
  { name="Luiz Irber", orcid="0000-0003-4371-9659" },
  { name="Mohamed Abuelanin", orcid="0000-0002-3419-4785" },
  { name="Olga Botvinnik", orcid="0000-0003-4412-7970" },
  { name="C. Titus Brown", orcid="0000-0001-6001-2677" },
]

[build-system]
requires = ["maturin>=1.4.0,<2"]
build-backend = "maturin"

[project.entry-points."sourmash.cli_script"]
manysearch = "sourmash_plugin_branchwater:Branchwater_Manysearch"
multisearch = "sourmash_plugin_branchwater:Branchwater_Multisearch"
fastgather = "sourmash_plugin_branchwater:Branchwater_Fastgather"
fastmultigather = "sourmash_plugin_branchwater:Branchwater_Fastmultigather"
index = "sourmash_plugin_branchwater:Branchwater_Index"
check = "sourmash_plugin_branchwater:Branchwater_Check"
manysketch = "sourmash_plugin_branchwater:Branchwater_Manysketch"
pairwise = "sourmash_plugin_branchwater:Branchwater_Pairwise"
cluster = "sourmash_plugin_branchwater:Branchwater_Cluster"
singlesketch = "sourmash_plugin_branchwater:Branchwater_SingleSketch"

[project.optional-dependencies]
test = [
  "pytest>=6.2.4,<8.4.0",
  "pytest-cov>=2.12,<7.0",
  "pytest-xdist",
  "pandas",
]

[tool.maturin]
python-source = "src/python"

[metadata]
license = { text = "GNU Affero General Public License v3" }

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.feature.build.dependencies]
clangdev = ">=16.0.6,<16.1"
cxx-compiler = ">=1.7.0,<1.8"
libclang = ">=16.0.6,<16.1"
python = "3.10.*"
rust = ">=1.80.0,<1.81"
maturin = ">=1.7.4,<2"
sourmash-minimal = ">=4.8.10,<5"

[tool.pixi.feature.build.target.linux-64.dependencies]
patchelf = ">=0.17.2,<0.18"

[tool.pixi.feature.build.target.linux-aarch64.dependencies]
patchelf = ">=0.17.2,<0.18"

[tool.pixi.feature.dev.dependencies]
git = "2.41.0.*"
make = ">=4.4.1,<5"
pip = ">=24.2"

[tool.pixi.feature.publish.dependencies]
twine = ">=5.1.1,<6"

[tool.pixi.system-requirements]
macos = "11.0"
linux = "3.10"
libc = "2.17"

[tool.pixi.environments]
default = { features = ["test", "build", "dev", "publish"], solve-group = "default" }

[tool.pixi.tasks]
develop = "maturin develop"
install = "python -m pip install -e ."
test = { cmd = "python -m pytest", depends-on = "develop" }
wheel = "python -m maturin build -r"
sdist = "rm -f target/wheels/sourmash_plugin_branchwater-*.tar.gz; python -m maturin sdist"
upload_dist = { cmd = "twine upload target/wheels/sourmash_plugin_branchwater-*.tar.gz", depends-on = "sdist" }
